Try to fix errors like `Malformed input or input contains unmappable characters: javaslang/?.class`
Temporary disable sue to https://github.com/jeremylong/DependencyCheck/issues/1742

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,7 @@ it:
 
 owasp:
   stage: verify
+#  enable when https://github.com/jeremylong/DependencyCheck/issues/1742 is fixed
   when: manual
   script:
     - ./gradlew dependencyCheckAnalyze
